<resources>
    <string name="app_name">MyFirstAppACR</string>
    <string name="main_activity_button_text">Escribir mensaje</string>
    <string name="second_activity_button_text">Enviar datos</string>
    <string name="second_activity_string_message">Cadena de texto</string>
    <string name="second_activity_string_hint">Introduzca algún texto</string>
    <string name="second_activity_int_message">Número entero</string>
    <string name="second_activity_int_hint">0</string>
    <string name="second_activity_float_message">Número decimal</string>
    <string name="second_activity_float_hint">0.0</string>
    <string name="second_activity_boolean_message">Interruptor booleano</string>
    <string name="third_activity_button_text">Volver al inicio</string>
    <string name="third_activity_string_text">Campo de texto: </string>
    <string name="third_activity_entero_text">Campo de número entero: </string>
    <string name="third_activity_decimal_text">Campo de número decimal: </string>
    <string name="third_activity_boolean_state">Estado del interruptor: </string>
</resources>